[package]
name = "markovTrans-rs"
version = "0.1.0"
edition = "2024"
description = "First-order Markov chain library with KL-divergence sliding-window comparison"
license = "MIT"
repository = "https://github.com/Basliel25/markov-rs"
readme = "README.md"
keywords = ["markov", "kl-divergence", "information-theory", "statistics"]
categories = ["mathematics", "science"]


[dependencies]
serde = "1.0.228"
serde_json = "1.0.150"

[lib]
name = "markov_trans_rs"
